payer_agentforce_agents/NetworkParticipationVerificationAgent/force-app/main/default/objects/vlocity_ins__ContractProviderNetwork__c/vlocity_ins__ContractProviderNetwork__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED. This object is deprecated, please use Provider Network Contract (ProviderNetworkContract).</description>
    <label>Contract Provider Network</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Provider Network</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>