payer_agentforce_agents/NetworkParticipationVerificationAgent/force-app/main/default/objects/vlocity_ins__ContractProviderNetwork__c/fields/vlocity_ins__ContractId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContractId__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Provider Network</relationshipLabel>
    <relationshipName>ContractProviderNetwork</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>