payer_agentforce_agents/NetworkParticipationVerificationAgent/force-app/main/default/objects/vlocity_ins__ContractProviderNetwork__c/fields/vlocity_ins__EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>