payer_agentforce_agents/NetworkParticipationVerificationAgent/force-app/main/default/objects/vlocity_ins__ContractProviderNetwork__c/fields/vlocity_ins__ProviderNetworkId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProviderNetworkId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Network</label>
    <referenceTo>vlocity_ins__ProviderNetwork__c</referenceTo>
    <relationshipLabel>Contract Provider Network</relationshipLabel>
    <relationshipName>ContractProviderNetwork</relationshipName>
    <type>Lookup</type>
</CustomField>